examples/test/testpolicy8835.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8835
  namespace: namespace472
spec:
  podSelector:
    matchLabels:
      key7: value46
      key13: value7
      key29: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value12
          key49: value36
      podSelector:
        matchLabels:
          key38: value33
          key14: value29
          key33: value20
